@@ -658,7 +658,7 @@ public class TokenMarker
 		int len = end - start;
 
 		//{{{ do digits.
-		
+
 		/* right now, this is hardcoded to handle these cases:
 		 * 1234
 		 * 0x1234abcf
@@ -698,16 +698,12 @@ loop:			for(int i = 0; i < len; i++)
 					else
 						break;
 				case 'd': case 'D':
+				case 'f': case 'F':
 					if(hex)
 						continue loop;
 					else if(i == len -1 && seenSomeDigits)
 						continue loop;
 					else
-						break;
-				case 'f': case 'F':
-					if(hex)
-						continue loop;
-					else if(i == len -1 && seenSomeDigits)
 						break;
 				case 'l': case 'L':
 					if(i == len -1 && seenSomeDigits)
